Добавлен интерфейс для сервиса, строки в константы, устранены магические числа