@@ -1,9 +1,10 @@
-package com.example.roaming_cdr_service.service;
+package com.example.roaming_cdr_service.service.impl;
 
 import com.example.roaming_cdr_service.model.CDR;
 import com.example.roaming_cdr_service.model.Subscriber;
 import com.example.roaming_cdr_service.repository.CDRRepository;
 import com.example.roaming_cdr_service.repository.SubscriberRepository;
+import com.example.roaming_cdr_service.service.impl.CDRServiceImpl;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
@@ -11,14 +12,15 @@ import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
 import java.util.Collections;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 /**
- * Unit-тесты для класса {@link CDRService}.
+ * Unit-тесты для класса {@link CDRServiceImpl}.
  */
-class CDRServiceTest {
+class ICDRServiceImplTest {
 
     @Mock
     private CDRRepository cdrRepository;
@@ -27,7 +29,7 @@ class CDRServiceTest {
     private SubscriberRepository subscriberRepository;
 
     @InjectMocks
-    private CDRService cdrService;
+    private CDRServiceImpl cdrServiceImpl;
 
     @BeforeEach
     void setUp() {
@@ -35,23 +37,27 @@ class CDRServiceTest {
     }
 
     /**
-     * Тест для метода {@link CDRService#generateCDRs()}.
+     * Тест для метода {@link CDRServiceImpl#generateCDRs()}.
      * Проверяет успешную генерацию CDR.
      */
     @Test
     void testGenerateCDRs_Success() {
-        // Подготовка данных
-        when(subscriberRepository.findAll()).thenReturn(Collections.singletonList(new Subscriber("79991112233")));
+        // Подготовка данных - теперь два абонента, а не один
+        List<Subscriber> mockSubscribers = List.of(
+                new Subscriber("79991112233"),
+                new Subscriber("79992221122")
+        );
+        when(subscriberRepository.findAll()).thenReturn(mockSubscribers);
 
         // Вызов метода
-        cdrService.generateCDRs();
+        cdrServiceImpl.generateCDRs();
 
         // Проверка результата
-        verify(cdrRepository, atLeastOnce()).save(any(CDR.class));
+        verify(cdrRepository, atLeastOnce()).saveAll(anyList());
     }
 
     /**
-     * Тест для метода {@link CDRService#generateCDRs()}.
+     * Тест для метода {@link CDRServiceImpl#generateCDRs()}.
      * Проверяет обработку ошибки при пустом списке абонентов.
      */
     @Test
@@ -60,6 +66,6 @@ class CDRServiceTest {
         when(subscriberRepository.findAll()).thenReturn(Collections.emptyList());
 
         // Вызов метода и проверка исключения
-        assertThrows(IllegalStateException.class, () -> cdrService.generateCDRs());
+        assertThrows(IllegalStateException.class, () -> cdrServiceImpl.generateCDRs());
     }
 }
